--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "flagembedding>=1.3.5",
     "langchain>=0.3.27",
     "langchain-google-genai>=2.1.12",
+    "langchain-ollama>=0.3.8",
+    "langchain-together>=0.3.1",
+    "ollama>=0.6.0",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
     "qdrant-client>=1.15.1",
