--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "ollama>=0.6.0",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
+    "pytest>=8.4.2",
     "qdrant-client>=1.15.1",
     "sentence-transformers>=5.1.1",
     "sqlalchemy>=2.0.43",
